fix vercel routing issues

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
   "alias": "whiff-city-scoreboard",
   "name": "whiff-city-scoreboard",
-  "routes": [
-    {
-      "src": "/",
-      "dest": "index.html"
-    }
+  "rewrites":  [
+    {"source": "/(.*)", "destination": "/"}
   ]
 }
