--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "debounce": "^2.2.0",
     "firebase": "^11.0.1",
     "svelte-routing": "^2.13.0"
   }
