set countries on players

--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   "dependencies": {
     "@types/debounce": "^1.2.4",
     "axios": "^1.7.7",
+    "country-list": "^2.3.0",
     "debounce": "^2.2.0",
     "firebase": "^11.0.1",
     "svelte-flagpack": "^1.0.0",
-    "svelte-routing": "^2.13.0"
+    "svelte-routing": "^2.13.0",
+    "svelte-select": "^5.8.3"
   }
 }
