--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vite": "^5.4.8"
   },
   "dependencies": {
+    "@types/country-list": "^2.1.4",
     "@types/debounce": "^1.2.4",
     "axios": "^1.7.7",
     "country-list": "^2.3.0",
